Building the JRE as Small as Possible & Adding the Resources to the Jar